2005-03-16  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): Handle new --module-static-run flag.
	* kawa/standard/require.java (importDefinitions): Skip fields whose
	name ends in "$instance" - except to optimize 'dofind'.

2005-03-11  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (importDefinitions): Don't set alias's
	type to typeFieldLocation, since getType should be post-indirection.
	(makeDeclInModule): Likewise, if field is a Location, decl type
	is Object. not a Location.

2005-03-07  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java: Update package of DefineNamespace.

	* kawa/standard/read_line.java (apply2): Update WrongType call.

2005-03-06  Per Bothner  <per@bothner.com>

	* ltmain.sh: New from CVS (patched) libtool 2.1a.
	* acinclude.m4, libtool.m4: Removed.
	* Makefile.am (EXTRA_DIST): Remove libtool.m4.
	* Makefile.in, configure, aclocal.m4: Re-generated.
	* configure.in: Updat AC_PROG_LIBTOOL to LT_INIT.
	* missing: New version from automake-1.9.
	* */Makefile.in: Re-generated.

2005-03-04  Per Bothner  <per@bothner.com>

	* kawa/repl.java: Update Interpreter->Language various places.
	* kawa/Shell.java: Likewise.
	* kawa/GuiConsole.java: Likewise.
	* kawa/TelnetRepl.java: Likewise.
	* kawa/lang/Lambda.java: Likewise.
	* kawa/lang/AutoloadProcedure.java: Likewise.
	* kawa/lang/CompileFile.java: Likewise.
	* kawa/standard/Scheme.java: Likewise.
	* kawa/standard/define_autoload.java: Likewise.
	* kawa/standard/define_syntax.java: Likewise.
	* kawa/standard/load.java: Likewise.
	* kawa/standard/not.java: Likewise.
	* kawa/standard/require.java: Likewise.
	* kawa/standard/syntax.java: Likewise.

	* kawa/standard/require.java (importDefinitions): Change to use
	FieldLocation.  Better handling of non-static modules and re-export.
	Don't set 'base' of fdecl (since it might be shared); instead create
	a ReferenceExp alias with a 'context'.
	(makeDeclInModule): Various tweaks.